deploy/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgh
  namespace: sgh
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sgh.inf.uct.cl
    external-dns.alpha.kubernetes.io/target: proxy.inf.uct.cl
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target:  /
spec:
  ingressClassName: nginx
  tls:
    - hosts: [ sgh.inf.uct.cl ]
      secretName: inf-uct-cl-tls  # Referencia al Secret del certificado
  rules:
    - host: sgh.inf.uct.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
